--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=DemonHub
 spring.datasource.url=jdbc:mysql://localhost:3306/demon_hub
 
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = Chicago2024@
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
