changed version number

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>edu.depaul.cdm</groupId>
 	<artifactId>DemonHub</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2</version>
 	<name>DemonHub</name>
 	<description>DemonHub Ecommerce Store</description>
 	<url/>
