--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> 
 	</parent>
 	<groupId>edu.depaul.cdm</groupId>
 	<artifactId>DemonHub</artifactId>
@@ -54,6 +54,7 @@
 			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
+		
 
 		
 	</dependencies>
