--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=DemonHub
-spring.datasource.url=jdbc:mysql://localhost:3306/demon_hub
-
-spring.datasource.username = root
-spring.datasource.password = Chicago2024@
-
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
