--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.data.mongodb.uri=mongodb://localhost:27017/demonhub
