--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
     	<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
+		<dependency>
+    	<groupId>de.flapdoodle.embed</groupId>
+    	<artifactId>de.flapdoodle.embed.mongo</artifactId>
+		<version>4.18.0</version>
+    	<scope>test</scope>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
