--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
 		</dependency>
 
 		<dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-core</artifactId>
+    	<version>2.20.0</version>
+		</dependency>
+		<dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-api</artifactId>
+    	<version>2.20.0</version>
+		</dependency>
+		
+		<dependency>
     	<groupId>de.flapdoodle.embed</groupId>
     	<artifactId>de.flapdoodle.embed.mongo</artifactId>
 		<version>4.18.0</version>
