Add wishlist feature for saving user preferences

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.data.mongodb.uri=mongodb://localhost:27017/demonhub
+spring.data.mongodb.database=demonhub
